recursion.logo.square.FourSquare.scala.code
override def run() {
  def square(){
    forward(100.0)
    left()
    forward(100.0)
    left()
    forward(100.0)
    left()
    forward(100.0)
    left()
  }
  square()
  left()
  left()
  forward(100.0)
  left()
  left()
  square()
  right()
  forward(100.0)
  left()
  square()
  forward(100.0)
  square()
  left()
  forward(100.0)
  right()
}